[project]
name = "gan-monet"
version = "0.1.0"
description = "GAN project for Monet style transfer"
authors = [
    {name = "Marco Santos"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tensorflow-addons (>=0.23.0,<0.24.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
